@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.23-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-23 09:15:29, took 00:10:40, with 60 workers, on 631 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-08-23 09:42:11, took 00:12:05, with 60 workers, on 631 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
